Use MongoDB instead of Files

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,4 @@ website: https://github.com/oHate/SurvivalMultiplayer
 api-version: '1.20'
 libraries:
   - dev.jorel:commandapi-bukkit-shade:9.2.0
+  - org.mongodb:mongodb-driver-sync:4.10.2
