--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <version>9.2.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.10.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
