--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,6 @@
             <url>https://repo.papermc.io/repository/maven-public/</url>
         </repository>
         <repository>
-            <id>aikar</id>
-            <url>https://repo.aikar.co/content/groups/aikar/</url>
-        </repository>
-        <repository>
             <id>minecraft-libraries</id>
             <url>https://libraries.minecraft.net</url>
         </repository>
@@ -68,6 +64,12 @@
             <groupId>com.mojang</groupId>
             <artifactId>brigadier</artifactId>
             <version>1.0.18</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>5.0.1</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
