--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,4 @@ api-version: '1.20'
 libraries:
   - dev.jorel:commandapi-bukkit-shade:9.2.0
   - org.mongodb:mongodb-driver-sync:4.10.2
+  - redis.clients:jedis:5.0.1
